# Data-Mining-Term-Project

./: .gitignore  devenv.nix  main.typ  paper.typ  pyproject.toml  refs.bib
notebook/: main.py
notebook/__marimo__/session/: main.py.json
